@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo tw=100 nocin nosi
 @c =========================================================================
 @c
-@c @(#) $Id: todo.texi,v 0.9.2.4 2007/06/22 00:18:54 brian Exp $
+@c @(#) $Id: todo.texi,v 0.9.2.5 2008-04-10 08:40:41 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/06/22 00:18:54 $ by $Author: brian $
+@c Last Modified $Date: 2008-04-10 08:40:41 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -77,21 +77,75 @@ Otherwise, expect this package to receive only maintenance releases over the nex
 
 @itemize @minus
 @item
+Important drivers and modules for the financial industry (POS, ATM, EFT) in support of POS to data
+center communications and data center to branch communications is as follows:
+
+@table @asis
+@item X.25
+@item @manpage{xot(4)}
+@c @item @manpage{isot(4)}
+@c @item @manpage{itot(4)}
+@end table
+
+@item
+Important drivers and modules for the aviation industry (ATN) in support of air-ground ground
+stations and Boundary Intermediate System and Intermediate System ground-ground stations are as
+follows:
+
+@table @asis
+@item ISO 8208 SNDCF
+@item ISO 8802 SNDCF
+@item Mobile 8208 SNDCF
+@item CIDIN SNDCF
+@item @manpage{clnp(4)}
+With security adaptations for the ATN network.
+@item @manpage{esis(4)}
+With subset for the ATN network.
+@item @manpage{isis(4)}
+With subset for the ATN network.
+@item @manpage{idrp(4)}
+With subset for the ATN network.
+@end table
+
+Additional drivers and modules in support of ground-to-ground Intermediate systems and End Systems:
+
+@table @asis
+@item @manpage{isot(4)}
+RFC 1006, ISO Transport over TCP.
+@item @manpage{itot(4)}
+RFC 2126, ISO Transport over TCP.
+@item @manpage{xot(4)}
+RFC 1613, Cisco X.25 over TCP.
+@end table
+
+Additional drivers and modules in support of ground end systems:
+
+@table @asis
+@item @manpage{tp(4)}
+@end table
+
+@item
 Testing.  This package is completely untested.
 
-@emph{*todo*}
+@table @emph
+@item *todo*
+@end table
 
 @item
 Create @manpage{isot(4)}, @manpage{itot(4)}, @manpage{lpp(4)} and
 @manpage{cmot(4)} @dfn{STREAMS} modules and drivers.
 
-@emph{*todo*}
+@table @emph
+@item *todo*
+@end table
 
 @item
 Move already written code from the @file{stacks} or @file{strss7} directories
 into the @file{src} directory.
 
-@emph{*todo*}
+@table @emph
+@item *done*
+@end table
 
 @item
 Create a skeleton directory and manual and place @command{@value{PACKAGE}} as
