@@ -1,5 +1,8 @@
 2008-04-10  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/manual/todo.texi: updated todo text
+	* src/util/gdmolex.l: correct INITIAL syntax error
+
 	* AUTHORS: updated release files
 	* NEWS: updated release files
 	* README: updated release files
